--- a/sticker1.html
+++ b/sticker1.html
@@ -5,11 +5,11 @@
   <title>Sticker 1</title>
 </head>
 <body>
-  <h1>Sticker 1 freigeschaltet! 🎉</h1>
+  <h1>Dole 1 freigeschaltet! 🎉</h1>
   <p>Glückwunsch! Du hast Sticker 1 gefunden.</p>
 
-  <!-- Hier könntest du später dein Bild einbauen -->
-  <!-- <img src="sticker1.png" alt="Sticker 1" /> -->
+  <!-- Bild korrekt eingebunden -->
+  <img src="sticker1.png" alt="Sticker 1" style="max-width: 300px; display:block; margin-bottom:20px;" />
 
   <p><a href="index.html">Zurück zum Album</a></p>
 
@@ -19,3 +19,4 @@
   </script>
 </body>
 </html>
+
