--- a/sticker1.html
+++ b/sticker1.html
@@ -8,8 +8,8 @@
   <h1>Dole 1 freigeschaltet! 🎉</h1>
   <p>Glückwunsch! Du hast Sticker 1 gefunden.</p>
 
-  <!-- Bild korrekt eingebunden -->
-  <img src="sticker1.png" alt="Sticker 1" style="max-width: 300px; display:block; margin-bottom:20px;" />
+  <!-- Bild AKTIV schalten -->
+  <img src="sticker1.png" alt="Sticker 1" />
 
   <p><a href="index.html">Zurück zum Album</a></p>
 
