--- a/sticker2.html
+++ b/sticker2.html
@@ -8,14 +8,14 @@
   <h1>Dole 2 freigeschaltet! 🎉</h1>
   <p>Glückwunsch! Du hast Sticker 2 gefunden.</p>
 
-  <!-- Wenn du ein Bild für Sticker 2 hast -->
-  <!-- <img src="sticker2.png" alt="Sticker 2" /> -->
+  <img src="sticker2.jpg" alt="Sticker 2" style="max-width:300px;" />
 
   <p><a href="index.html">Zurück zum Album</a></p>
 
   <script>
-    // Merken, dass Sticker 2 gesammelt wurde
     localStorage.setItem("sticker_2", "1");
   </script>
 </body>
 </html>
+
+
